--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/test
+MONGODB_URI=mongodb://bhumi:bhumibroker2017@ds119081.mlab.com:19081/mydata
 SECRET_TOKEN=catswillruletheworld
