--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.3.3",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -39,6 +40,7 @@
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
+    "primeng": "^4.1.2",
     "rxjs": "^5.4.1",
     "tether": "1.4.0",
     "zone.js": "^0.8.14"
