--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://bhumi:bhumibroker2017@ds119081.mlab.com:19081/mydata
+MONGODB_URI=mongodb://bhumi:bhumiBroker2017@ds149353.mlab.com:49353/mydata
 SECRET_TOKEN=catswillruletheworld
